--- a/todo-app/src/index.css
+++ b/todo-app/src/index.css
@@ -4,12 +4,19 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  min-height: 100%;
 }
 
 code {
