--- a/apptodo/src/index.css
+++ b/apptodo/src/index.css
@@ -4,14 +4,13 @@
   box-sizing: border-box;
 }
 
-html {
+/* html {
   font-size: 62.5%;
   position: relative;
   min-height: 100%;
-}
+} */
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
