--- a/apptodo/src/App.scss
+++ b/apptodo/src/App.scss
@@ -1,1 +1,22 @@
+body {
+  background: #7eaba6;
+  text-shadow: 1px 1px 2px #183531;
 
+  .App {
+    max-width: 400px;
+  }
+  input[type="text"],
+  input[type="text"]:focus {
+    color: #fff;
+    border: none;
+    background: rgba(16, 32, 23, 0.1);
+    max-width: 400px;
+  }
+
+  .todos li {
+    background: #9ad1cb;
+  }
+  .delete {
+    cursor: pointer;
+  }
+}
